--- a/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/admin_menu.html
@@ -189,6 +189,16 @@
                     </li>
 
                     <!-- Quản lý đơn hàng kết thúc  -->
+                    
+                    <!-- Quản lý bình luận bắt đầu  -->
+                    <li>
+                        <a th:href="@{/admin_binhluan}" class="nav-link px-3">
+                            <span class="me-2"><i class="bi bi-book-fill"></i></span>
+                            <span>Quản lý bình luận</span>
+                        </a>
+                    </li>
+
+                    <!-- Quản lý bình luận kết thúc  -->
 
                     <li class="my-4">
                         <hr class="dropdown-divider bg-light" />
