--- a/ConverseStore_Java6/src/main/resources/templates/user/doimatkhau.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/doimatkhau.html
@@ -73,7 +73,7 @@
                         </div>
 
                         <button type="submit" class="btn btn-login">OK</button>
-                        <h6 class="mt-4 text-center"><a href="./signin.html">Đăng nhập</a></h6>
+                        <h6 class="mt-4 text-center"><a href="./signin.html">Quay về trang chủ</a></h6>
                     </form>
                 </div>
 
