--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_BinhLuan.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_BinhLuan.html
@@ -5,12 +5,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" />
-    <link rel="stylesheet" th:href="@{css/admin_css.css}" />
-    <link th:href="@{/css/mycss.css}" rel="stylesheet" />
-    <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
     <title>CONVERSE - ADMIN BÌNH LUẬN</title>
 </head>
 
@@ -70,6 +64,19 @@
                                         <label for="masanpham" class="form-label fs-17">Trả lời:</label>
                                         <textarea name="" id="" rows="3" class="form-control"></textarea>
                                     </div>
+                                    <div class="mb-3 col-md-12">
+                                        <label for="masanpham" class="form-label fs-17">Ngày trả lời:</label>
+                                        <input type="date" class="form-control" id="masanpham">
+                                    </div>
+                                    <div class="row">
+                                        <div class="mb-3 col-md-12">
+                                            <label for="masanpham" class="form-label fs-17">Hiển thị:</label>
+                                            <label>
+                                            <input type="radio" value="true" name="status"> Công khai</label>
+                                            <label><input type="radio" value="false" name="status" checked> Ẩn</label>
+                                            
+                                        </div>
+                                    </div>
                                 </div>
 
                                 <button type="submit" class="btn btn-success"><i class="bi bi-card-list"></i> Sửa</button>
@@ -102,7 +109,9 @@
                                         <th>NGÀY BÌNH LUẬN</th>
                                         <th>NHÂN VIÊN</th>
                                         <th>TRẢ LỜI BÌNH LUẬN</th>
+                                        <th>NGÀY TRẢ LỜI</th>
                                         <th>TRẠNG THÁI</th>
+                                        <th>HIỂN THỊ</th>
                                         <th></th>
                                     </tr>
                                 </thead>
@@ -115,21 +124,25 @@
                                         <td>22-12-2022</td>
                                         <td>Chí Phèo</td>
                                         <td>Cảm ơn bạn</td>
-                                        <td>1</td>
+                                        <td>23-12-2022</td>
+                                        <td>Đã duyệt</td>
+                                        <td>Công khai</td>
                                         <td>
                                             <a type="submit" class="btn btn-warning">Chọn</a>
                                             <a type="submit" class="btn btn-danger">Xóa</a>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>1</td>
+                                        <td>2</td>
                                         <td>Nike</td>
                                         <td>Nguyễn Văn B</td>
                                         <td>Sản phẩm đẹp</td>
                                         <td>22-12-2022</td>
                                         <td>NULL</td>
                                         <td>NULL</td>
-                                        <td>0</td>
+                                        <td>NULL</td>
+                                        <td>Chờ duyệt</td>
+                                        <td>Công khai</td>
                                         <td>
                                             <a type="submit" class="btn btn-warning">Chọn</a>
                                             <a type="submit" class="btn btn-danger">Xóa</a>
