--- a/ConverseStore_Java6/src/main/resources/templates/admin/admin_BinhLuan.html
+++ b/ConverseStore_Java6/src/main/resources/templates/admin/admin_BinhLuan.html
@@ -26,18 +26,18 @@
                             Form Bình Luận
                         </div>
                         <div class="card-body">
-                            <form>
+                            <form action="/admin/binhluan" th:object="${form}">
                                 <div class="row">
                                     <div class="mb-3 col-md-12">
                                         <input type="hidden" class="form-control">
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="tensanpham" class="form-label fs-17">Tên sản phẩm:</label>
-                                        <input type="text" class="form-control" id="tensanpham" th:field="*{}">
+                                        <input type="text" class="form-control" id="tensanpham" th:field="*{productId}">
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="tenkhachhang" class="form-label fs-17">Tên khách hàng:</label>
-                                        <input type="text" class="form-control" id="tenkhachhang">
+                                        <input type="text" class="form-control" id="tenkhachhang" th:field="*{customerId}">
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="noidung" class="form-label fs-17">Nội dung bình luận:</label>
@@ -45,7 +45,7 @@
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="ngaybl" class="form-label fs-17">Ngày bình luận:</label>
-                                        <input type="date" class="form-control" id="ngaybl" th:field="*{}">
+                                        <input type="date" class="form-control" id="ngaybl" th:field="*{createDate}">
                                     </div>
                                     <div class="row">
                                         <div class="mb-3 col-md-12">
@@ -58,11 +58,11 @@
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="nv" class="form-label fs-17">Nhân viên:</label>
-                                        <input type="text" class="form-control" id="nv">
+                                        <input type="text" class="form-control" id="nv" th:field="*{employeeId}">
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="traloi" class="form-label fs-17">Trả lời:</label>
-                                        <textarea id="traloi" rows="3" class="form-control" th:field="*{}"></textarea>
+                                        <textarea id="traloi" rows="3" class="form-control" th:field="*{adminReply}"></textarea>
                                     </div>
                                     <div class="mb-3 col-md-12">
                                         <label for="ngaytrl" class="form-label fs-17">Ngày trả lời:</label>
@@ -116,11 +116,11 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>1</td>
+                                    <tr th:each="cmt : ${form}">
+                                        <td th:text="${cmt.productId}"></td>
                                         <td>Bitis</td>
                                         <td>Nguyễn Văn A</td>
-                                        <td>Sản phẩm chất lượng</td>
+                                        <td th:text="cmt.comment"></td>
                                         <td>22-12-2022</td>
                                         <td>Chí Phèo</td>
                                         <td>Cảm ơn bạn</td>
