--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -1,156 +1,200 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layout/layout::dynamic(~{::body})}">
+<html xmlns:th="http://www.thymeleaf.org"
+	th:replace="~{/layout/layout::dynamic(~{::main})}">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONVERSE || SẢN PHẨM</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CONVERSE || SẢN PHẨM</title>
 </head>
 
 <body>
-    <div id="mainProduct">
-        <div class="container-fluid">
-            <div class="row mt-4">
-<div class="col-md-3">
-            <div id="accordion">
-                <div class="card">
-                    <div class="card-header" style="text-align: center; background-color: beige;">
-                         <a class="btn" data-bs-toggle="collapse" href="#collapseOne"> <!--data-bs-parent="#accordion" -->
-                            <h5>DANH MỤC SẢN PHẨM</h5>
-                        </a>
-                    </div>
-                    <div id="collapseOne" class="collapse show">
-                        <div class="card-body">
-                            <div class="danhmuc-sp">
-                                
-                                <ul>
-                                    <li th:each="c: ${cates}"><a th:href="@{|/sanpham?cid=${c.categoryID}|}" >[[${c.categoryName}]]1</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+	<main>
+		<div id="mainProduct">
+			<div class="container-fluid">
+				<div class="row mt-4">
+					<div class="col-md-3">
+						<div id="accordion">
+							<div class="card">
+								<div class="card-header"
+									style="text-align: center; background-color: beige;">
+									<a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+										<!--data-bs-parent="#accordion" -->
+										<h5>DANH MỤC SẢN PHẨM</h5>
+									</a>
+								</div>
+								<div id="collapseOne" class="collapse show">
+									<div class="card-body">
+										<div class="danhmuc-sp">
 
-                <div class="card">
-                    <div class="card-header" style="text-align: center; background-color: beige;">
-                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
-                            <h5>DÁNG GIÀY</h5>
-                        </a>
-                    </div>
-                    <div id="collapseTwo" class="collapse">
-                        <div class="card-body">
-                            <div class="danhmuc-sp">
-                                
-                                <ul>
-                                    <li><a href="#">Cao</a></li>
-                                    <li><a href="#">Thấp</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-header" style="text-align: center; background-color: beige;">
-                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
-                            <h5>THƯƠNG HIỆU</h5>
-                        </a>
-                    </div>
-                    <div id="collapseThree" class="collapse">
-                        <div class="card-body">
-                            <div class="danhmuc-sp">
-                               
-                                <ul>
-                                    <li><a href="#">Converse</a></li>
-                                    <li><a href="#">Vans</a></li>
-                                    <li><a href="#">Nike</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="card">
-                    <div class="card-header" style="text-align: center; background-color: beige;">
-                        <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFour">
-                            <h5>LỌC SẢN PHẨM</h5>
-                        </a>
-                    </div>
-                    <div id="collapseFour" class="collapse">
-                        <div class="card-body">
-                            <select class="form-select ">
-                                <option value="">Vui lòng chọn kiểu sắp xếp</option>
-                                <option>Sắp xếp sản phẩm theo tên từ A -> Z</option>
-                                <option>Sắp xếp sản phẩm theo tên từ Z -> A</option>
-                                <option>Sắp xếp sản phẩm giá cao -> giá thấp</option>
-                                <option>Sắp xếp sản phẩm giá thấp -> giá cao</option>
-                              </select>
-                              <button type="button" class="btn btn-primary mt-3">Lọc</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-                <div class="col-md-9">
-                    <div class="row">
-                        <div th:each="p: ${productitems}"  class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-4">
-                            <div class="card" style="width:100%">
-                                <a th:href="@{|/sanpham/chitietsp/${p.productID}|}"><img class="card-img-top" th:src="@{|/assets/imageSP/${p.productImage1}|}"
-                                        alt="Card image" style="width:100%"></a>
-                                <div class="card-body">
-                                    <a th:href="@{|/sanpham/chitietsp/${p.productID}|}">
-                                        <h4 class="card-title text-center" th:text="${p.productName}"></h4>
-                                        <div class="price-product">
-                                    <div th:unless="${p.promotionsProducts}" >
-                                    	
-                                    	<h4 class="card-title" ><span class="card-title-normal"  th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4>
-                                    	<h4 class="card-title" style="color: white;">123</h4>
-                                    </div>
-                                    <div th:if="${p.promotionsProducts}">
-                                    	<h4 class="card-title"><span class="card-title-old"  th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span></h4>
-											 <h4 class="card-title"><span class="card-title-sale"  th:text="${#numbers.formatDecimal(p.promotionsProducts.promotions.discount, 0, 'COMMA', 0 , 'POINT')}  + ' ₫'"></span></h4>
-                                    </div>
-											
-                                    </div>
-                                    </a>
-                                    <div class="row d-flex justify-content-center">
-                                        <a th:href="@{|/sanpham/chitietsp/${p.productID}|}" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
-                                        <a th:href="@{'/addyeuthich/'+ ${sanpham.masp}}" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        
-                        
-                        
-                        
-                        
-                        
-                        <div class="d-flex justify-content-between">
-                            <ul class="pagination">
-								  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-								  <li class="page-item"><a class="page-link" href="#">1</a></li>
-								  <li class="page-item active"><a class="page-link" href="#">2</a></li>
-								  <li class="page-item"><a class="page-link" href="#">3</a></li>
-								  <li class="page-item"><a class="page-link" href="#">Next</a></li>
-							</ul>
-							<div class="d-flex justify-content-around">
-							<ul class="pagination">
-								  <li class="page-item"><a class="page-link" href="#">First</a></li>
-								  <li class="page-item"><a class="page-link" href="#">Last</a></li>
-							</ul>
+											<ul>
+												<li th:each="c: ${cates}"><a
+													th:href="@{|/sanpham?cid=${c.categoryID}|}"
+													th:text="${c.categoryName}"></a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
 							</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <button type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
-        <i class="ti-angle-double-up"></i>
-    </button>
+
+							<div class="card">
+								<div class="card-header"
+									style="text-align: center; background-color: beige;">
+									<a class="collapsed btn" data-bs-toggle="collapse"
+										href="#collapseTwo">
+										<h5>DÁNG GIÀY</h5>
+									</a>
+								</div>
+								<div id="collapseTwo" class="collapse">
+									<div class="card-body">
+										<div class="danhmuc-sp">
+
+											<ul>
+												<li><a href="#">Cao</a></li>
+												<li><a href="#">Thấp</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="card">
+								<div class="card-header"
+									style="text-align: center; background-color: beige;">
+									<a class="collapsed btn" data-bs-toggle="collapse"
+										href="#collapseThree">
+										<h5>THƯƠNG HIỆU</h5>
+									</a>
+								</div>
+								<div id="collapseThree" class="collapse">
+									<div class="card-body">
+										<div class="danhmuc-sp">
+
+											<ul>
+												<li><a href="#">Converse</a></li>
+												<li><a href="#">Vans</a></li>
+												<li><a href="#">Nike</a></li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="card">
+								<div class="card-header"
+									style="text-align: center; background-color: beige;">
+									<a class="collapsed btn" data-bs-toggle="collapse"
+										href="#collapseFour">
+										<h5>LỌC SẢN PHẨM</h5>
+									</a>
+								</div>
+								<div id="collapseFour" class="collapse">
+									<div class="card-body">
+										<select class="form-select ">
+											<option value="">Vui lòng chọn kiểu sắp xếp</option>
+											<option>Sắp xếp sản phẩm theo tên từ A -> Z</option>
+											<option>Sắp xếp sản phẩm theo tên từ Z -> A</option>
+											<option>Sắp xếp sản phẩm giá cao -> giá thấp</option>
+											<option>Sắp xếp sản phẩm giá thấp -> giá cao</option>
+										</select>
+										<button type="button" class="btn btn-primary mt-3">Lọc</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-9">
+						<div class="row">
+							<div th:each="p: ${productitems}"
+								class="col-xl-3 col-lg-4 col-sm-6 col-12 mb-4">
+								<div class="card" style="width: 100%">
+<!-- 									<a th:href="@{|/sanpham/chitietsp/${p.productID}|}"> -->
+									<img class="card-img-top"
+										th:src="@{|/assets/imageSP/${p.productImage1}|}"
+										alt="Card image" style="width: 100%">
+<!-- 										</a> -->
+									<div class="card-body">
+										<a th:href="@{|/sanpham/chitietsp/${p.productID}|}">
+											<h4 class="card-title text-center" th:text="${p.productName}"></h4>
+											<div class="price-product">
+												<div th:unless="${p.promotionsProducts}">
+
+													<h4 class="card-title">
+														<span class="card-title-normal"
+															th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span>
+													</h4>
+													<h4 class="card-title" style="color: white;">123</h4>
+												</div>
+<!-- 												<div th:if="${p.promotionsProducts}"> -->
+<!-- 													<h4 class="card-title"> -->
+<!-- 														<span class="card-title-old" -->
+<!-- 															th:text="${#numbers.formatDecimal(p.price, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></span> -->
+<!-- 													</h4> -->
+<!-- 													<h4 class="card-title"> -->
+<!-- 														<span class="card-title-sale" -->
+<!-- 															th:text="${#numbers.formatDecimal(p.promotionsProducts.promotions.discount, 0, 'COMMA', 0 , 'POINT')}  + ' ₫'"></span> -->
+<!-- 													</h4> -->
+<!-- 												</div> -->
+
+											</div>
+										</a>
+<!-- 										<div class="row d-flex justify-content-center"> -->
+<!-- 											<a th:href="@{|/sanpham/chitietsp/${p.productID}|}" -->
+<!-- 												class="btn product-btn"><i class="ti-shopping-cart"></i> -->
+<!-- 												Chi tiết</a> <a th:href="@{'/addyeuthich/'+ ${sanpham.masp}}" -->
+<!-- 												class="btn product-btn"><i class="ti-heart"></i> Yêu -->
+<!-- 												thích</a> -->
+<!-- 										</div> -->
+										<div class="row d-flex justify-content-center">
+                                        <a th:href="@{|/sanpham/chitietsp/${p.productID}|}" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
+                                        <a th:href="@{'/addyeuthich/'+ ${p.productID}}" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
+                                    </div>
+									</div>
+								</div>
+							</div>
+
+<!-- 								<div th:each="p: ${productitems}"> -->
+<!-- 									<div th:text="${p.productName}"></div> -->
+<!-- 									<div th:text="${p.productImage1}"></div> -->
+<!-- 									<div th:text="${#numbers.formatDecimal(p.promotionsProducts.promotions.discoun, 0, 'COMMA', 0 , 'POINT')} + ' ₫'"></div> -->
+<!-- 								</div> -->
+								
+<!-- 								<div th:each="c: ${cates}"> -->
+<!-- 									<div th:text="${c.categoryName}"></div> -->
+<!-- 								</div> -->
+
+
+
+
+
+
+
+							<div class="d-flex justify-content-between">
+								<ul class="pagination">
+									<li class="page-item"><a class="page-link" href="#">Previous</a></li>
+									<li class="page-item"><a class="page-link" href="#">1</a></li>
+									<li class="page-item active"><a class="page-link" href="#">2</a></li>
+									<li class="page-item"><a class="page-link" href="#">3</a></li>
+									<li class="page-item"><a class="page-link" href="#">Next</a></li>
+								</ul>
+								<div class="d-flex justify-content-around">
+									<ul class="pagination">
+										<li class="page-item"><a class="page-link" href="#">First</a></li>
+										<li class="page-item"><a class="page-link" href="#">Last</a></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<button type="button" class="btn btn-primary btn-floating btn-lg"
+			id="btn-back-to-top">
+			<i class="ti-angle-double-up"></i>
+		</button>
+	</main>
 </body>
 
 </html>
